--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@inlet/react-pixi": "^6.8.0",
+    "@pixi/events": "^7.2.3",
     "@pixi/react": "^7.0.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
@@ -20,7 +21,7 @@
     "gh-pages": "^5.0.0",
     "next": "^13.0.1",
     "next-pwa": "^5.6.0",
-    "pixi.js": "^7.2.3",
+    "pixi.js": "5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
