--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@inlet/react-pixi": "^6.8.0",
     "@pixi/events": "^7.2.3",
+    "@pixi/filter-outline": "^5.2.0",
     "@pixi/react": "^7.0.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
